--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   );
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
   --scrollbar-primary: #00040f;
-  --scrollbar-secondary: lightblue;
+  --scrollbar-secondary: rgb(157, 219, 240);
 }
 
 * {
@@ -45,11 +45,11 @@
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
+    #33bbcf 100%,
+    #33bbcf 100%,
+    #33bbcf 100%,
+    #33bbcf 100%,
+    #33bbcf 100%,
     #33bbcf 100%
   );
   -webkit-background-clip: text;
